<resources>
    <string name="app_name">1v1Demo</string>
    <string name="rmb">元</string>
    <string name="second">秒</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="success_str">成功</string>
    <string name="year">年</string>
    <string name="percent">%</string>
    <string name="ju">。</string>
    <string name="ok">好</string>
    <string name="chat">聊天</string>
    <string name="red_pack">红包</string>
    <string name="vip">VIP</string>
    <string name="gift">礼物</string>
    <string name="upload_fail">上传失败</string>
    <string name="file_too_big">文件大小应该在50M以内</string>
    <string name="system_error">系统维护中,请稍后再试</string>
    <string name="vip_free">VIP 免费</string>
    <string name="pay_success">消费成功</string>
    <string name="pay_fail">赠送失败</string>
    <string name="reward_success">赠送成功</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="rmb_des">¥</string>
    <string name="me">我</string>
    <string name="multi">x</string>
    <string name="multi_one">x1</string>
    <string name="accept">接通</string>
    <string name="not_accept">拒绝</string>
    <string name="hang_up">挂断</string>
    <string name="please_choose_vip">请选择套餐</string>
    <string name="pay_vip_success">支付成功</string>
    <string name="pay_vip_fail">支付失败</string>
    <string name="see_rule">查看规则</string>
    <string name="been_suspend">对不起,由于您违反了平台相关规定,账号已被封禁</string>
    <string name="not_bother_des">开启勿扰后你将收不到视频邀请</string>
    <string name="notice_title">小提示</string>
    <string name="go_set">去设置</string>
    <string name="notice_des">请前往设置打开应用悬浮窗权限，您会接到更多小哥哥、小姐姐来电哦~</string>
    <string name="update_now">立即更新</string>
    <string name="own_company">版权所有&#160;@2019&#160;&#160;1v1Demo</string>
    <string name="high_beauty">一对一直播交友平台</string>
    <string name="clear_all">清空</string>
    <string name="free_one">免费</string>
    <string name="charge_one">付费</string>
    <string name="see_video_need">查看本视频需要支付:</string>
    <string name="see_picture_need">查看本照片需要支付:</string>
    <string name="male_not">暂未开放男主播认证</string>
    <string name="no_more">没有更多了</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="qq_fail">获取QQ登录信息失败,请换其他方式登录</string>
    <string name="we_chat_fail">获取微信登录信息失败,请换其他方式登录</string>
    <string name="can_not_communicate">暂未开放未认证用户之间交流</string>
    <string name="sex_can_not_communicate">暂未开放同性用户之间交流</string>
    <string name="multi_one_one">&#160;x1</string>
    <string name="have_verify">已认证</string>
    <string name="yes">是</string>
    <string name="nine_nine">99+</string>
    <string name="message_sound">消息提示音</string>
    <string name="message_vibrate">消息提示震动</string>
    <string name="my_active">我的动态</string>
    <string name="gold">金币</string>
    <string name="gold_des">&#160;(金币)</string>
    <string name="gold_des_one">&#160;金币</string>
    <string name="zero">0</string>
    <string name="charge">充值</string>
    <string name="online_service">在线客服</string>
    <string name="help_center">帮助中心</string>
    <string name="green_agree">1v1Demo绿色直播协议书</string>
    <string name="set_not_bother">离线勿扰</string>
    <string name="clear_cache">清除缓存</string>
    <string name="apply_company">申请公会</string>
    <string name="apply_company_ing">审核中</string>
    <string name="actor_ing">主播审核中</string>
    <string name="apply_company_ing_des">你的公会正在审核中,请勿重复提交</string>
    <string name="my_company">我的公会</string>
    <string name="reject">拒绝</string>
    <string name="accept_des">接受</string>
    <string name="invite_you">邀请你加入</string>
    <string name="company">公会</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_fail">操作失败</string>
    <string name="belong_company">所属公会:&#160;</string>
    <string name="company_down">你的公会已下架,请联系客服</string>
    <string name="cps_share">CPS推广</string>
    <string name="apply_cps_ing_des">你的CPS推广正在审核中,请勿重复提交</string>
    <string name="cps_down">你的CPS推广已下架,请联系客服</string>
    <string name="account_left">账户余额</string>
    <string name="can_carry">可提现</string>
    <string name="apply_actor">申请主播</string>
    <string name="system_set">系统设置</string>
    <string name="actor_ing_des">你的主播申请正在审核中,请勿重复提交</string>
    <string name="home">首页</string>
    <string name="focus">关注</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="edit_verify_info">编辑资料</string>
    <string name="head_img">头像</string>
    <string name="nick">昵称</string>
    <string name="please_input_nick">请输入昵称 (必填)</string>
    <string name="please_input_nick_des">请输入昵称</string>
    <string name="job">职业</string>
    <string name="model">模特</string>
    <string name="net_hot">网红</string>
    <string name="please_input_job">请选择职业 (必填)</string>
    <string name="phone">手机号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="we_chat_number">微信号</string>
    <string name="we_chat_number_des">主播微信号&#160;:&#160;</string>
    <string name="we_chat_number_des_one">主播微信号为&#160;:&#160;</string>
    <string name="please_input_we_chat">请输入微信号</string>
    <string name="modify_age">年龄</string>
    <string name="age_title">年龄(岁)</string>
    <string name="eighteen">18</string>
    <string name="age_des">岁</string>
    <string name="modify_age_des">请输入年龄 (必填)</string>
    <string name="height">身高</string>
    <string name="one_hundred_and_sixty">160</string>
    <string name="high_des">cm</string>
    <string name="high_title_des">身高(cm)</string>
    <string name="please_input_height">请输入身高 (必填)</string>
    <string name="weight">体重</string>
    <string name="fourty_kg">40</string>
    <string name="body_des">kg</string>
    <string name="body_title_des">体重(kg)</string>
    <string name="please_input_weight">请设置体重 (必填)</string>
    <string name="star">星座</string>
    <string name="sheep">白羊座</string>
    <string name="please_input_star">请输入星座 (必填)</string>
    <string name="city">城市</string>
    <string name="choose_city">选择城市</string>
    <string name="bei_jing">北京</string>
    <string name="bei_jing_des">北京市</string>
    <string name="dong_cheng">东城区</string>
    <string name="please_input_city">请输入城市 (必填)</string>
    <string name="tag">形象标签</string>
    <string name="please_input_tag">+形象标签(必填)</string>
    <string name="please_input_tag_des">请选择形象标签</string>
    <string name="sign">个性签名</string>
    <string name="please_input_sign">请输入个性签名 (选填)</string>
    <string name="submit_verify">确认修改</string>
    <string name="submit_verify_warn">*严禁上传违背国家法律法规的内容</string>
    <string name="set_cover">封面</string>
    <string name="set_cover_long">设为封面</string>
    <string name="four_most">最多只能上传4张</string>
    <string name="delete_fail">删除失败</string>
    <string name="tags_not_select">您还未选择标签</string>
    <string name="edit_fail">编辑资料失败</string>
    <string name="file_not_exist">文件不存在,请重新选择</string>
    <string name="nick_repeat">昵称重复不可用</string>
    <string name="actor_at_least_upload_one">主播请至少上传一张图片作为封面</string>
    <string name="update_fail">更新失败</string>
    <string name="not_good_image">无效图片,请重新选择</string>
    <string name="video_uploading">视频正在上传中,请稍等</string>
    <string name="with_draw_money">提现明细</string>
    <string name="share_to_earn_money">收徒赚钱</string>
    <string name="my_one">我的徒弟</string>
    <string name="my_two">我的徒孙</string>
    <string name="apply_verify">申请主播</string>
    <string name="apply_step_one">第一步&#160;&#160;上传身份证正面照片</string>
    <string name="click_upload_head_image">点击上传照片</string>
    <string name="upload_head_image_notice">1.确保是本人真实照片, 正面照片。\n2.图片清晰可见, 色彩明亮。</string>
    <string name="upload_head_image_notice_one">1、确保身份证与本人照片相符;\n2、图片清晰可见, 色彩明亮。\n3、本照片仅用于认证,不会对外公开</string>
    <string name="notice_three">3.本图片仅作为认证使用,</string>
    <string name="notice_pink">不会对外公开</string>
    <string name="apply_step_three">第二步&#160;&#160;上传本人正面照片</string>
    <string name="real_name">真实姓名</string>
    <string name="submit_verify_des">立即认证</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="please_input_id_card_number">请输入身份证号</string>
    <string name="picture_not_choose">您还未选择照片</string>
    <string name="law_des">认证即代表您已经阅读并同意</string>
    <string name="law_des_one">&#160;《1v1Demo绿色直播协议书》</string>
    <string name="verify_fail">认证失败</string>
    <string name="verify_success">认证成功</string>
    <string name="id_card_picture_not_choose">您还未选择身份证正面照片</string>
    <string name="self_picture_not_choose">您还未选择本人正面照片</string>
    <string name="choose_again">上传失败,请重新选择</string>
    <string name="my_gold">我的金币</string>
    <string name="service">客服</string>
    <string name="please_choose_money">请选择充值金额</string>
    <string name="account_detail">账单详情</string>
    <string name="charge_gold">充值金币</string>
    <string name="with_draw_now">立即兑换</string>
    <string name="withdraw">提现</string>
    <string name="with_draw_not_select">未选择具体金额</string>
    <string name="account_not_bind">您还未绑定账号</string>
    <string name="please_choose_alipay_account">请选择支付宝账户</string>
    <string name="please_choose_wechat_account">请选择微信账户</string>
    <string name="apply_withdraw_success">申请提现成功</string>
    <string name="can_with_draw_one">可提现金币</string>
    <string name="bind_now">立即绑定</string>
    <string name="need_gold">所需金币:</string>
    <string name="with_draw_need_know">提现须知:\n1、提现1&#8211;3个工作日到账,请耐心等待;\n2、每人每天只能提现一次</string>
    <string name="checking">审核中</string>
    <string name="ali_pay_des">支付宝提现</string>
    <string name="we_chat_des">微信提现</string>
    <string name="month">月</string>
    <string name="all">全部</string>
    <string name="withdraw_ing">提现中</string>
    <string name="withdraw_successful">提现成功</string>
    <string name="withdraw_fail">提现失败</string>
    <string name="with_draw_total">提现总额 (元)</string>
    <string name="four">30</string>
    <string name="quick">速配</string>
    <string name="near">附近</string>
    <string name="male_fan">男粉</string>
    <string name="age">&#160;岁</string>
    <string name="price">&#160;金币/分钟</string>
    <string name="free">在线</string>
    <string name="offline">离线</string>
    <string name="busy">在聊</string>
    <string name="system_message">系统消息</string>
    <string name="system_phone">我的通话</string>
    <string name="click_to_see">点击查看最新消息</string>
    <string name="chat_user">聊友: </string>
    <string name="official">官方</string>
    <string name="click_to_know">点击咨询在使用中碰到的任何问题</string>
    <string name="video_chat">视频聊天</string>
    <string name="complain">投诉举报</string>
    <string name="report">黑名单</string>
    <string name="report_des">投诉</string>
    <string name="click_copy_number">点击复制微信号</string>
    <string name="video_chat_one">与&#160;TA&#160;视频</string>
    <string name="report_reason">请告诉我们您想举报该直播的理由</string>
    <string name="can_not_see">黑屏看不到人</string>
    <string name="bad_attitude">态度恶劣</string>
    <string name="bad_adver">垃圾广告</string>
    <string name="private_chat">私聊</string>
    <string name="please_input_phone_login">请输入手机号码</string>
    <string name="login_agree">《1v1Demo用户协议》</string>
    <string name="login_agree_des">登录即代表你已经阅读并同意</string>
    <string name="vip_start">升级VIP免费畅聊</string>
    <string name="phone_num_des">手机号:</string>
    <string name="note_des">温馨提示</string>
    <string name="open_now">立即开启</string>
    <string name="des_one">使用"附近"功能需要开启定位服务</string>
    <string name="des_two">系统检测到你未开启定位服务,无法使用该功能,请开启【位置信息】,并允许使用【定位服务】。</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="please_input_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login_one">登录</string>
    <string name="confirm_one">确&#160;&#160;&#160;&#160;定</string>
    <string name="same_city">同城1v1视频交友</string>
    <string name="phone_number_login">手机登录</string>
    <string name="we_chat_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="register_notice">*注册或登录,即代表你已同意</string>
</resources>