<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_868686">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/content_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@id/cover_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--中间内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_scroll"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/same_city"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <!--三个登录-->
        <TextView
            android:id="@id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_scroll_phone_text_back"
            android:gravity="center"
            android:text="@string/phone_number_login"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@id/we_chat_tv"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_scroll_we_chat_text_back"
            android:gravity="center"
            android:text="@string/we_chat_login"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/qq_tv"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_scroll_qq_text_back"
            android:gravity="center"
            android:text="@string/qq_login"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/register_notice"
                android:textColor="@color/white_d9d8de"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/agree_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/login_agree"
                android:textColor="@color/red_fe2947"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>