<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/content_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/cover_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="76dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/near_cover"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <!--标题-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/shape_reward_rule_title_back"
                android:gravity="center"
                android:text="@string/note_des"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_reward_rule_bottom_back"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/des_one"
                    android:textColor="@color/red_fe2947"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/des_two"
                    android:textColor="@color/black_3f3b48"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/open_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/open_now"
                    android:textColor="@color/red_fe2947"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>