<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yiliaodemo.chat.im.ChatInput
        android:id="@+id/input_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/input_panel"
        android:layout_below="@id/title_ll"
        android:background="@color/gray_divine_color"
        android:divider="@null"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <FrameLayout
                android:id="@+id/left_fl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <ImageView
                    android:id="@+id/left_image"
                    android:layout_width="12dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:contentDescription="@null"
                    android:focusable="false"
                    android:scaleType="center"
                    android:src="@drawable/icon_arrow_black" />

            </FrameLayout>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/focus_tv"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_add_foucs_text_back"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e1e1e1" />

        <LinearLayout
            android:id="@+id/vip_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/first_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_chat"
                android:textColor="@color/black_333333"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/vip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/vip_start"
                android:textColor="@color/red_fe2947"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>